--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=0" />
   <script src="https://codepen.io/steveg3003/pen/zBVakw.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
-  <title>Stack3</title>
+  <title>NITRO W3</title>
 </head>
 
 <body>
